# sigma-racer-cluster

./: .gitignore  Cargo.toml  README.md  bodywork.md  build.md  build.rs  chassis.md  efi.md  electrical.md  electronics.md  emissions_certification.md  engine.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/spec/: build.md
examples/: gen_sample_log.rs
scripts/: vcan-up.sh
src/: log.rs  main.rs  telemetry.rs  vehicle.rs
src/app/: boot.rs  clock.rs  idle.rs  mod.rs
src/connectivity/: agent.rs  backends.rs  bluez.rs  connman.rs  mod.rs  nav.rs
src/telemetry/: attach.rs  binding.rs  can_source.rs  mod.rs  navigation.rs  replay.rs  session.rs
src/vehicle/: mod.rs  profile.rs  xs900_gp.rs
