[package]
name = "sigma-racer-cluster"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Sigma Racer Wingman instrument cluster UI"
repository = "https://github.com/sigmatactical-org/sigma-racer-cluster"
homepage = "https://github.com/sigmatactical-org/sigma-racer-cluster"
rust-version = "1.86.0"
publish = false
build = "build.rs"

[[bin]]
name = "sigma-racer-cluster"
path = "src/main.rs"

[dependencies]
sigma-instrumentation = { path = "../sigma-instrumentation/sigma-instrumentation" }
sigma-racer-telemetry = { git = "ssh://git@github.com/sigmatactical-org/sigma-racer-telemetry.git", rev = "b09c0cc" }
slint = { version = "=1.13.1", default-features = false, features = ["renderer-femtovg", "backend-winit", "compat-1-2"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[lints.rust]
unsafe_code = "forbid"
