[package]
name = "sigma-racer-cluster"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Sigma Racer Wingman instrument cluster UI"
repository = "https://github.com/sigmatactical-org/sigma-racer-cluster"
homepage = "https://sigmatactical.org"
rust-version = "1.86.0"
publish = false
build = "build.rs"

[[bin]]
name = "sigma-racer-cluster"
path = "src/main.rs"

[features]
default = []
# Bench/test source: read live CAN frames off a SocketCAN interface (vcan0/can1).
# Off by default so production/embedded builds pull in no socketcan dependency.
can-socket = ["dep:socketcan"]

[dependencies]
sigma-instrumentation = { path = "../sigma-instrumentation/sigma-instrumentation" }
sigma-racer-telemetry = { path = "../sigma-racer-telemetry" }
slint = { version = "=1.17.1", default-features = false, features = ["renderer-femtovg", "backend-winit", "compat-1-2"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
socketcan = { version = "3.6.2", optional = true }
zbus = { version = "5.17.0", features = ["blocking-api"] }

[lints.rust]
unsafe_code = "forbid"
